[package]
name = "picors"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Picocrypt-style file encryptor in Rust (XChaCha20-Poly1305 + Argon2id)"
license = "MIT"
rust-version = "1.94.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
indicatif = "0.17"
zeroize = "1.8"
rpassword = "7.4"