[package]
name = "picors"
version = "0.4.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Picocrypt CLI replica in Rust with AES-256-CTR + XChaCha20-Poly1305 paranoid cascade"
license = "MIT"
rust-version = "1.94.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
indicatif = "0.17"
zeroize = "1.8"
rpassword = "7.4"
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
generic-array = "0.14"   # required for AES-CTR key/IV